fixed review comment, fixed bugfix/etsl-411 alignment issue on mobile

--- a/ui.frontend/src/main/webpack/etisalat/styles/custom-components/header/header.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/custom-components/header/header.scss
@@ -1444,7 +1444,7 @@ html[lang=ar] [dir=rtl] .top-nav-section .top-nav-right {
 	cursor: pointer
 }
 
-@media (min-width:992px) and (max-width:1366px) {
+@include respond-to-min-max($desktop-wide, $desktop) {
 	.top-nav-section .top-nav-right .links li a {
 		padding: 0  toRem(24);
 	}
